# uf-bsp

./: .gitignore  Cargo.toml  README.md  justfile
.github/workflows/: CI.yml  sec.yml
boards/speedybee-f405-v4-bsp/: Cargo.toml  memory.x
boards/speedybee-f405-v4-bsp/examples/: imu_spi.rs
boards/speedybee-f405-v4-bsp/src/: board.rs  dma.rs  interrupts.rs  lib.rs  parts.rs  pins.rs
boards/tbs-lucid-h7-bsp/: Cargo.toml  build.rs
boards/tbs-lucid-h7-bsp/examples/: blinky.rs  imu_spi.rs
boards/tbs-lucid-h7-bsp/src/: board.rs  clocks.rs  dma.rs  interrupts.rs  lib.rs  parts.rs  pins.rs  usb.rs
speedybee-f405-v4-bsp/: Cargo.toml  README.md  build.rs  justfile
speedybee-f405-v4-bsp/examples/: baro_i2c.rs  blinky.rs  imu_spi.rs
speedybee-f405-v4-bsp/examples/support/: usb_logger.rs
speedybee-f405-v4-bsp/src/: board.rs  clocks.rs  dma.rs  interrupts.rs  lib.rs  parts.rs  pins.rs  usb.rs  usb_logger.rs
tbs-lucid-h7-bsp/: Cargo.toml  README.md  build.rs  memory.x
tbs-lucid-h7-bsp/examples/: baro_i2c.rs  blinky.rs  clock_report.rs  imu_spi.rs  usb_serial.rs
tbs-lucid-h7-bsp/src/: board.rs  clocks.rs  dma.rs  interrupts.rs  lib.rs  parts.rs  pins.rs  usb.rs
uf-bsp-core/: Cargo.toml
uf-bsp-core/src/: irq_latch.rs  lib.rs  usb_cdc.rs
