[workspace]
members = ["boards/*-bsp"]
resolver = "2"

[workspace.dependencies]
defmt = "1.0.1"
embassy-stm32 = "0.6.0"
stm32-metapac = "21.0.0"
cortex-m-rt = "0.7.5"
embassy-executor = { version = "0.9.1", features = ["arch-cortex-m", "executor-thread"] }
embassy-time = "0.5.0"
embedded-hal-async = "1.0.0"
panic-halt = "1.0.0"
