[workspace]
members = ["tbs-lucid-h7-bsp", "speedybee-f405-v4-bsp"]
resolver = "3"

[workspace.package]
version = "0.1.0"
rust-version = "1.87"
edition = "2024"
license-file = "LICENSE"
authors = ["Mykola Novik <mykola@uflight.dev>"]
repository = "https://github.com/jettify/uf-bsp"
homepage = "https://github.com/jettify/uf-bsp"

[workspace.dependencies]
embassy-stm32 = "0.6.0"
embassy-usb = "0.6.0"
stm32-metapac = "21.0.0"
cortex-m-rt = "0.7.5"
embassy-executor = { version = "0.10.0", features = [
  "platform-cortex-m",
  "executor-thread",
] }
embassy-time = "0.5.0"
embedded-hal-async = "1.0.0"
panic-halt = "1.0.0"
