[workspace]
members = ["tbs-lucid-h7-bsp", "speedybee-f405-v4-bsp"]
resolver = "3"

[workspace.package]
version = "0.1.0"
rust-version = "1.87"
edition = "2024"
license-file = "LICENSE"
authors = ["Mykola Novik <mykola@uflight.dev>"]
repository = "https://github.com/jettify/uf-bsp"
homepage = "https://github.com/jettify/uf-bsp"

[workspace.dependencies]
embassy-stm32 = "0.6.0"
embassy-usb = "0.6.0"
stm32-metapac = "21.0.0"
embedded-hal-bus = { version = "0.3.0", features = ["async"] }
icm426xx = { version = "0.4.0", features = ["async"] }
uf-dps3xx = "0.2.0"
cortex-m-rt = "0.7.5"
embassy-executor = { version = "0.10.0", features = [
  "platform-cortex-m",
  "executor-thread",
] }
embassy-futures = "0.1.2"
embassy-time = "0.5.0"
embedded-hal-async = "1.0.0"
panic-halt = "1.0.0"
defmt = "1.0.1"
defmt-rtt = "1.1.0"
panic-probe = { version = "1.0.0", features = ["print-defmt"] }

[workspace.lints.clippy]
unwrap_used = "forbid"
expect_used = "forbid"
panic = "deny"
todo = "warn"
exit = "deny"
try_err = "deny"
unimplemented = "deny"
print_stdout = "warn"
print_stderr = "warn"
must_use_candidate = "allow"
allow_attributes_without_reason = "deny"
allow_attributes = "deny"
dbg_macro = "warn"
infinite_loop = "warn"
map_err_ignore = "deny"
rest_pat_in_fully_bound_structs = "warn"
return_and_then = "warn"
undocumented_unsafe_blocks = "deny"
string_slice = "warn"
unneeded_field_pattern = "warn"
missing_assert_message = "warn"
redundant_type_annotations = "warn"
indexing_slicing = "deny"
let_underscore_must_use = "deny"

[profile.release]
codegen-units = 1
debug = 2
lto = 'fat'
opt-level = 's'
