[package]
name = "speedybee-f405-v4-bsp"
version = "0.1.0"
edition = "2024"

[dependencies]
embassy-stm32 = { workspace = true, features = [
  "stm32f405rg",
  "time-driver-any",
  "exti",
] }
stm32-metapac = { workspace = true }

[features]

[dev-dependencies]
cortex-m-rt = { workspace = true }
embassy-executor = { workspace = true }
embassy-time = { workspace = true }
embedded-hal-async = { workspace = true }
panic-halt = { workspace = true }
