[package]
name = "speedybee-f405-v4-bsp"
version.workspace = true
edition.workspace = true
license-file.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true

[dependencies]
embassy-stm32 = { workspace = true, features = [
  "stm32f405rg",
  "time-driver-any",
  "exti",
] }
stm32-metapac = { workspace = true }

[dev-dependencies]
cortex-m-rt = { workspace = true }
embassy-executor = { workspace = true }
embassy-time = { workspace = true }
embedded-hal-async = { workspace = true }
panic-halt = { workspace = true }
