[package]
name = "uf-bsp-core"
version.workspace = true
edition.workspace = true
license-file.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true

[lints]
workspace = true

[dependencies]
embassy-sync = { workspace = true }
embassy-usb = { workspace = true }
