[package]
name = "speedybee-f405-v4-bsp"
version = "0.1.0"
edition = "2024"

[dependencies]
defmt = { workspace = true, optional = true }
embassy-stm32 = { workspace = true, features = ["stm32f405rg", "time-driver-any", "exti"] }
stm32-metapac = { workspace = true }

[features]
defmt = ["dep:defmt"]

[dev-dependencies]
cortex-m-rt = "0.7.5"
embassy-executor = { version = "0.9.1", features = ["arch-cortex-m", "executor-thread"] }
embassy-time = "0.5.0"
embedded-hal-async = "1.0.0"
panic-halt = "1.0.0"
