[package]
name = "tbs-lucid-h7-bsp"
version = "0.1.0"
edition = "2024"

[dependencies]
defmt = { workspace = true, optional = true }
embassy-stm32 = { workspace = true, features = ["stm32h743zi", "time-driver-any", "exti"] }
embassy-usb = "0.6.0"
stm32-metapac = { workspace = true }

[features]
defmt = ["dep:defmt"]

[dev-dependencies]
cortex-m-rt = { workspace = true }
embassy-executor = { workspace = true }
embassy-time = { workspace = true }
embedded-hal-async = { workspace = true }
panic-halt = { workspace = true }
